--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   fluttertoast: ^8.2.6
   google_sign_in: ^6.2.1
   flutter_launcher_icons: ^0.13.1
+  intl: ^0.19.0
 
 flutter_launcher_icons:
   android: true
